[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "1.2.0"
name = "oneEngine"
description = "a simulation of a card game"
authors = [
    { name = "Milan", email = "milan@mboemer.de" }
]

dependencies = []
requires-python = ">= 3.12"

[project.urls]
Repository = "https://github.com/milan-py/oneEngine"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
docs = [
    "sphinx_rtd_theme~=3.1.0",
    "Sphinx~=9.1.0"
]
tests = [
    "flake8~=7.3.0",
    "pytest~=9.0.3",
    "mypy~=1.20.2"
]
all = [
    "oneEngine[docs,tests]"
]


[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.setuptools.package-data]
oneEngine = ["py.typed"]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true