[metadata]
name = unoEngine
description = a simulation of the card game Uno
author = Milan
platforms = unix, linux, osx, cygwin, win32

[options]
packages =
    unoEngine
install_requires =

python_requires = >=3.10
package_dir =
    =src

[options.extras_require]
testing =
    flake8~=7.2.0
    pytest~=8.3.5
    mypy~=0.910

[options.package_data]
unoEngine = py.typed

[flake8]
max-line-length = 160
